# film_rental_rust

./: .env-example  .gitignore  Cargo.toml
src/: main.rs
src/models/: mod.rs  response.rs
src/routes/: counter.rs  mod.rs
src/routes/actors/: actors.rs  mod.rs
src/routes/cities/: cities.rs  mod.rs
src/routes/customers/: customers.rs  mod.rs
src/routes/movies/: mod.rs  movies.rs
src/routes/stores/: mod.rs  stores.rs
