[package]
name = "film_rental_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "time", "chrono"] }
