[package]
name = "film_rental_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
actix-web = "4"
actix-cors = "0.6.4"
dotenv = "0.15.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "time", "chrono", "rust_decimal"] }
cargo-watch = "8.4.0"
rust_decimal = "1.31.0"
